--- a/level_2_3/src/components/Card/style.scss
+++ b/level_2_3/src/components/Card/style.scss
@@ -53,7 +53,7 @@
     transform: translateY(-1em);
     cursor: pointer;
 
-    img {
+    & > span, img {
       height: 65%;
     }
 
@@ -63,7 +63,7 @@
   }
 
   &.without-desc {
-    img {
+    & > span, img {
       height: 100%;
     }
   }
