--- a/level_2_3/src/components/Gallery/style.scss
+++ b/level_2_3/src/components/Gallery/style.scss
@@ -1,3 +1,5 @@
+@import '../../helpers';
+
 .gallery {
   display: flex;
   align-items: center;
@@ -5,6 +7,11 @@
   div {
     position: relative;
     cursor: pointer;
+
+    @include for-size('phone-only') {
+        display: none;
+    }
+
   }
 
   div:first-of-type {
@@ -18,5 +25,30 @@
   .image {
     width: 39em;
     height: 25em;
+    object-fit: contain;
+
+    @include for-size('phone-only') {
+      width: 100%;
+      height: 20em;
+    }
+
   }
+}
+
+.phone-arrows {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @include for-size('tablet-portrait-up') {
+    display: none;
+  }
+
+  div {
+    margin: 1em 3em;
+    img {
+      height: 4em;
+    }
+  }
+
 }
