--- a/level_2_3/src/components/Grid/style.scss
+++ b/level_2_3/src/components/Grid/style.scss
@@ -6,10 +6,14 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax($width, 1fr));
   grid-row-gap: 2em;
-  grid-column-gap: 1em;
+  grid-column-gap: 0.5em;
   justify-items: center;
 
   @include for-size('desktop-up') {
     justify-items: flex-start;
+  }
+
+  @include for-size('desktop-up') {
+    grid-column-gap: 1em;
   }
 }
